mantle-macros/tests/ui/bad_rpc_sig.stderr
error: RPC methods cannot declare an ABI.
  --> $DIR/bad_rpc_sig.rs:12:20
   |
12 |         pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(
   |                    ^^^^^^

error: RPC methods may not be unsafe.
  --> $DIR/bad_rpc_sig.rs:12:13
   |
12 |         pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(
   |             ^^^^^^

error: RPC methods may not have generic type parameters.
  --> $DIR/bad_rpc_sig.rs:12:37
   |
12 |         pub unsafe extern "C" fn wtf<T: std::fmt::Debug>(
   |                                     ^

error: aborting due to 3 previous errors

